update iptables image

--- a/iptables/tarmaker/Dockerfile
+++ b/iptables/tarmaker/Dockerfile
@@ -1,6 +1,5 @@
 # Dockerfile for busybox+iptables using buildroot
-FROM            radial/distro:us-west-1
-MAINTAINER      Brian Clements <radial@brianclements.net>
+FROM            ubuntu:14.04
 
 # Install packages
 ENV             DEBIAN_FRONTEND noninteractive
@@ -21,7 +20,7 @@ RUN             mkdir -p /tmp/builder
 WORKDIR         /tmp/builder
 
 # Retrieve files and check authenticity
-ENV             BR_VERSION 2014.02
+ENV             BR_VERSION 2015.02
 RUN             wget -nv http://buildroot.uclibc.org/downloads/buildroot-$BR_VERSION.tar.gz &&\
                 wget -nv http://buildroot.uclibc.org/downloads/buildroot-$BR_VERSION.tar.gz.sign &&\
                 wget -nv http://uclibc.org/~jacmet/pubkey.gpg &&\
