update rootfs to git 2.4.3
Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/git/tarmaker/Dockerfile
+++ b/git/tarmaker/Dockerfile
@@ -30,7 +30,8 @@ RUN             wget -nv http://buildroot.uclibc.org/downloads/buildroot-$BR_VER
 
 # Extract
 RUN             tar -zxf buildroot-$BR_VERSION.tar.gz &&\
-                mv buildroot-$BR_VERSION buildroot
+                mv buildroot-$BR_VERSION buildroot &&\
+                sed -i 's/GIT_VERSION = .*/GIT_VERSION = 2.4.3/g' /tmp/builder/buildroot/package/git/git.mk
 WORKDIR         /tmp/builder/buildroot
 
 
